# e2hat

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
frontend/: app.js  index.html  manifest.json  protocol.js  robots.txt  sitemap.xml  style.css  sw.js
server/: Dockerfile  app.py  protocol.py  session.py
